1.实现用户模块，使用RBAC（用户-角色-权限）实现访问控制 2.提供用户注册、登录、登出、注销（软删）能力 3.使用 Sa-Token 替代 Spring Security，做到轻量、可控、易维护 4.提供了初始化的docker-compose配置文件

--- a/ai-agent-station-app/pom.xml
+++ b/ai-agent-station-app/pom.xml
@@ -85,6 +85,20 @@
             <artifactId>mysql-connector-j</artifactId>
         </dependency>
 
+        <!-- Sa-Token -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot3-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-redis-jackson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+        </dependency>
+
 
         <!-- # 多数据源路由配置
              # mysql 5.x driver-class-name: com.mysql.jdbc.Driver    mysql-connector-java 5.1.34
