--- a/ai-agent-station-trigger/pom.xml
+++ b/ai-agent-station-trigger/pom.xml
@@ -42,6 +42,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- Sa-Token -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot3-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
